# quortextt

./: .env.example  .envrc  .gitignore  AGENTS.md  ANIMATION_FRAMEWORK.md  Cargo.toml  DEBUG_LEGALITY_TEST.md  DEPLOYMENT.md  DESIGN_DOC.md  DESIGN_INSPECTION.md  DEVELOPMENT.md  DIRECTION_BUG_ANALYSIS.md  E2E_OPTIMIZATION_SUMMARY.md  E2E_SCREENSHOT_STABILITY_ANALYSIS.md  FACEBOOK_INTEGRATION.md  ILLEGAL_MOVE_ALGO.md  INTENDED_DISCORD_UX.md  IOS_DESIGN.md  LOBBY_UX_REDESIGN.md  MOVE_NOTATION_TEST_SUMMARY.md  NOTATION.md  OPPONENT_MOVE_ANIMATION.md  PRODUCTION_DEPLOYMENT.md  RATING_SYSTEM.md  README.md  RENDERING_OPTIMIZATIONS.md  ROUTING_DESIGN.md  RULES.md  Trunk.toml  UI_DESIGN.md  WEBHOOK_DEPLOYMENT.md  WEB_MULTIPLAYER.md  auth-test.html  fill_template.sh  flake.nix  index.html  package-lock.json  package.json  playwright.config.ts  playwright.timing.config.ts  (+5 more)
.cargo/: config.toml
.github/: agent-init.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  validate-pr.yml
.husky/: pre-commit
assets/: sw.js
design/: ai.md
discord/: index.html
docs/: MULTIPLAYER.md  RENDERING_TROUBLESHOOTING.md  RULES.md  TODOS_SUMMARY.md
docs/designs/: ANDROID_DESIGN.md  BAG_FILLING_DESIGN.md  DESIGN_DOC.md  DISCORD_DESIGN.md  EDGE_CASE_CONNECTIONS.md  INTENDED_DISCORD_UX.md  (+6 more)
scripts/: agent-bootstrap.sh  e2e-timing-reporter.ts  generate-game-test.ts  generate-lobby-screenshots.ts  regenerate-expectations.mjs  regenerate-unit-expectations.mjs  regenerate-unit-test-expectations.ts  test-ai-rematch-flakiness.sh
server/: .gitignore  package-lock.json  package.json
src/: ai_backend.rs  app.rs  backend.rs  discordMain.ts  game.rs  game_ui.rs  game_view.rs  legality.rs  lib.rs  main.rs  main.ts  multiplayerMain.ts  server.rs  server_backend.rs  server_backend_ws.rs  server_protocol.rs  tile_generator.rs  vite-env.d.ts  widgets.rs
tests/: aiRematch.test.ts  ai_backend.rs  animation.test.ts  bagEmptyConstraintVictory.test.ts  constraintVictoryWithSupermove.test.ts  coverage.test.ts  flow-bug-move5.test.ts  flow-bug-two-tiles.test.ts  flow-specific-bug.test.ts  gameplayReducer.test.ts  hexLayout.test.ts  illegal_moves.rs  lobbyInputHandler.test.ts  opponent_move_animation.rs  playerAuthorization.test.ts  player_order_randomization.rs  reducer.test.ts  rematch.test.ts  seatingPhase.test.ts  selectors.test.ts  storeDevtools.test.ts  tileDistribution.test.ts  tileDistributionIntegration.test.ts  uiReducer.test.ts  userIdPropagation.test.ts  victoryAnimation.test.ts
(+170 files in other folders)
